--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -30,6 +30,12 @@
         </item>
         <item>
          <widget class="QScrollArea" name="scrollArea">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
@@ -38,7 +44,7 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>369</width>
+             <width>85</width>
              <height>474</height>
             </rect>
            </property>
